Aula 16 27-05-2025 finalizando autenticacao