@@ -1,11 +1,10 @@
 package br.edu.ifmg.produto.services;
 
-import br.edu.ifmg.produto.dtos.UserDTO;
+import br.edu.ifmg.produto.dtos.ProductDTO;
 import br.edu.ifmg.produto.dtos.RoleDTO;
 import br.edu.ifmg.produto.dtos.UserDTO;
-
 import br.edu.ifmg.produto.dtos.UserInsertDTO;
-import br.edu.ifmg.produto.entities.User;
+import br.edu.ifmg.produto.entities.Product;
 import br.edu.ifmg.produto.entities.Role;
 import br.edu.ifmg.produto.entities.User;
 import br.edu.ifmg.produto.projections.UserDetailsProjection;
@@ -34,55 +33,40 @@ import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
 
 @Service
 public class UserService implements UserDetailsService {
-
-
     @Autowired
     private UserRepository userRepository;
+
     @Autowired
     private RoleRepository roleRepository;
-    
+
     @Autowired
     private PasswordEncoder passwordEncoder;
 
     @Transactional(readOnly = true)
-    public Page<UserDTO> findAll(Pageable pageable){
+    public Page<UserDTO> findAll(Pageable pageable) {
         Page<User> list = userRepository.findAll(pageable);
 
         return list.map(u -> new UserDTO(u));
     }
 
-
     @Transactional(readOnly = true)
-    public UserDTO findById(Long id){
+    public UserDTO findById(Long id) {
         Optional<User> opt = userRepository.findById(id);
-        User user = opt.orElseThrow(()-> new ResourceNotFound("User Not Found"));
+        User user = opt.orElseThrow(() -> new ResourceNotFound("User Not Found"));
         return new UserDTO(user);
     }
 
     @Transactional
-    public UserDTO insert(UserInsertDTO dto){
+    public UserDTO save(UserInsertDTO dto) {
         User entity = new User();
-        copyDtoToEntity(dto,entity);
+        copyDtoToEntity(dto, entity);
         entity.setPassword(passwordEncoder.encode(dto.getPassword()));
         User novo = userRepository.save(entity);
         return new UserDTO(novo);
     }
 
-    private void copyDtoToEntity(UserDTO dto, User entity){
-        entity.setEmail(dto.getEmail());
-        entity.setFirstName(dto.getFirstName());
-        entity.setLastName(dto.getLastName());
-
-        
-        for(RoleDTO role : dto.getRoles()){
-            Role r = roleRepository.getReferenceById(role.getId());
-            entity.getRoles().add(r);
-        }
-    }
-
-
     @Transactional
-    public UserDTO update (Long id, UserDTO dto) {
+    public UserDTO update (Long id, UserInsertDTO dto) {
         try {
             User entity = userRepository.getReferenceById(id);
             this.copyDtoToEntity(dto, entity);
@@ -108,29 +92,33 @@ public class UserService implements UserDetailsService {
         }
     }
 
-    @Transactional
-    public UserDTO save(UserInsertDTO dto) {
-        User entity = new User();
-        copyDtoToEntity(dto,entity);
-        entity.setPassword(passwordEncoder.encode(dto.getPassword()));
-        User novo = userRepository.save(entity);
-        return new UserDTO(novo);
-    }
-
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        List<UserDetailsProjection> result  = userRepository.searchUserAndRolesByEmail(username);
+        List<UserDetailsProjection> result = userRepository.searchUserAndRoleByEmail(username);
 
-        if(result.isEmpty()){
+        if (result.isEmpty()) {
             throw new UsernameNotFoundException("User not found");
         }
 
         User user = new User();
-        user.setEmail(result.getFirst().getUsername());
-        user.setPassword(result.getFirst().getPassword());
-        for(UserDetailsProjection p : result){
-            user.addRole(new Role(p.getRoleId(),p.getAuthority()));
+        user.setEmail(result.get(0).getUsername());
+        user.setPassword(result.get(0).getPassword());
+        for (UserDetailsProjection p : result) {
+            user.addRole(new Role(p.getRoleId(), p.getAuthority()));
         }
+
         return user;
+    }
+
+    private void copyDtoToEntity(UserDTO dto, User entity) {
+        entity.setFirstName(dto.getFirstName());
+        entity.setLastName(dto.getLastName());
+        entity.setEmail(dto.getEmail());
+
+        entity.getRoles().clear();
+        for (RoleDTO role : dto.getRoles()) {
+            Role r = roleRepository.getReferenceById(role.getId());
+            entity.getRoles().add(r);
+        }
     }
 }
